--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -16,5 +16,5 @@
         PositionChanged="UserTryToChangePosition"
         IsVisible="False"
         ShowActivated="False">
-        <Border Background="Red" Width="50" Height="50"></Border>
+        <Canvas Name="MainCanvas"></Canvas>
 </Window>
